[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "pyzora_fortwoone"
version = "1.0.0"
authors = [
  { name="fortwoone"},
]
description = "Python library to help parsing secrets from Zelda OoS/OoA"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/fortwoone/pyzora"
Issues = "https://github.com/fortwoone/pyzora/issues"